<resources>

    <!-- Splash Activity -->
    <string name="app_name">Travesia</string>

    <!-- Login Activity -->
    <string name="btnLogin">Log in</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtPassword">Password</string>
    <string name="error_empty">Please enter all mandatory fields.</string>
    <string name="welcome">Welcome: %s</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_login_failed">Authentication failed.</string>


    <!-- Profile Activity -->
    <string name="lblProfileName">Travis The Migratory Bird</string>
    <string name="lblProfileNationality">Nationality</string>

    <!-- More Fragment -->

    <string name="lblGreetings1">Hello there! \n\nThanks for sharing your plans with me and my friends. We are always looking for new ways to make your experience better. So please, feel free to take a look to this Guide with some tips to make your trips more fun, safe and epic!</string>
    <string name="lblGreetings2">\nAnd if liked this App, don"'"t forget to give it 5 stars on Google App Store. \n\nSee ya my friend. \n\nLove,</string>
    <string name="lblTitleMore">Travis"'" Travesia Guide</string>
    <string name="lblTravisMore">Travis</string>
    <string name="cdesTravisPictureMore">Travis The Migratory Bird picture - Hint: He is an eastern blue bird</string>

    <!-- Menu Titles -->
    <string name="lblProfileTitle">Profile</string>
    <string name="lblBookingsTitle">Bookings</string>
    <string name="lblExploreTitle">Explore</string>
    <string name="lblOnTourTitle">On Tour</string>
    <string name="lblMoreTitle">More</string>

    <!-- Login Activity -->

    <string name="lblLoginTitle">LOGIN</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password</string>
    <string name="lblForget">Forget your password?</string>
    <string name="buttonLogin">LOG IN</string>

    <string name="lblOr">OR</string>

    <string name="buttonSignUp">SIGN UP</string>
    <string name="lblLanguages">Languages</string>
    <string name="lblDuration">Duration</string>
    <string name="lblStart">Start: </string>
    <string name="lblEnd">End: </string>
    <string name="lblDays">Days: </string>
    <string name="lblPrice">Price</string>
    <string name="lblCategories">Categories</string>
    <string name="lblCapacity">Capacity</string>
    <string name="lblMeeting">Meeting Point</string>
    <string name="lblDescriptionTitle">Description</string>
    <string name="lblTipsTitle">Tips</string>
    <string name="lblLocationTitle">Location</string>
    <string name="lblGuideTitle">Guide Info</string>
    <string name="btnBook">BOOK</string>


    <string name="lblBookTitle">Let\'s book it!</string>
    <string name="lblDate">Date</string>
    <string name="lblNumberPeople">Number of People</string>
    <string name="lblContactYou">Your guide will contact you for other important details.</string>

    <!-- OnTour Fragment -->

    <string name="lblIntroOntour1">For your safety, please turn on the GPS function before starting your Tour and turn it off afterwards. We will store your coordenates for SOS purposes. Please take this in consideration and before pressing the Emergency button below.</string>
    <string name="lblIntroOntour2">Emergency contact e-mail is available for us to get in touch with a friend or family member you trust.</string>
    <string name="lblEmergencyContact">Emergency Contact</string>
    <string name="txtEmergencyContact">E-mail</string>
    <string name="btnEmergency">Emergency</string>
    <string name="toastMessage">Emergency contact and Location have been saved. We will proceed to take action. %s</string>
    <string name="toastFalse">GPS is not activated, please turn it on to give access at your current data.</string>
    <string name="toastEmailMissing">Emergency contact is empty. Please provide contact information of someone you trust.</string>
    <string name="swiTrue">GPS Activated</string>
    <string name="swiFalse">GPS Deactivated</string>

    <!-- Register Activity -->

    <string name="lblName">Name</string>
    <string name="txtName">Travis</string>
    <string name="lblLastName">Last Name</string>
    <string name="txtLastName">The Migratory Bird</string>
    <string name="hintPassword">Choose a safe password</string>
    <string name="lblConfirmPassword">Confirm Password</string>
    <string name="hintConfirmPassword">Repeat your password</string>
    <string name="lblTitleRegister">Let\'s start your adventure</string>
    <string name="btnRegister">Register</string>
    <string name="lblAge">Age</string>
    <string name="lblGender">Gender</string>
    <string name="lblPhone">Phone</string>

    <string-array name="nationality_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>France</item>
        <item>South Korea</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Hidden data</item>
    </string-array>

</resources>
