<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/MoreFont.Title"
            android:id="@+id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitleRegister"
            />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblName" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtName" />

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLastName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtLastName" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/txtEmail" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"/>

        <TextView
            android:id="@+id/lblConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblConfirmPassword" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hintConfirmPassword"/>

        <TextView
            android:id="@+id/lblNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblProfileNationality" />

        <Spinner
            android:id="@+id/spiNationality"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/lblAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAge" />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGender" />

        <Spinner
            android:id="@+id/spiGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPhone" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnNextRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"/>

    </LinearLayout>


</ScrollView>