<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorIcons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20pt"
        android:gravity="center_horizontal">

        <TextView
            style="@style/MoreFont"
            android:id="@+id/lblIntroOntour1"
            android:text="@string/lblIntroOntour1"/>

        <TextView
            style="@style/MoreFont"
            android:id="@+id/lblIntroOntour2"
            android:text="@string/lblIntroOntour2"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GPS function "
            android:padding="15dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/lblEmergencyContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEmergencyContact" />

        <EditText
            android:id="@+id/txtEmergencyContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/txtEmergencyContact" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/btnEmergency"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_margin="20dp"/>


    </LinearLayout>

</ScrollView>

