<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backborder"
        android:padding="20dp">

        <TextView
            android:id="@+id/lblTourTitleBook"
            style="@style/MoreFont.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/lblBookTitle" />

        <TextView
            android:id="@+id/lblDateTitleBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDate"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/txtDateBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:hint="Ex: 25/12/2019"/>

        <!--CalendarView
            android:id="@+id/calendarViewDateBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" /-->

        <TextView
            android:id="@+id/lblQuantityTitleBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNumberPeople"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/txtQuantityBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Ex: 5"/>

        <Button
            android:id="@+id/btnSendBook"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btnBook"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/lblMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblContactYou" />
    </LinearLayout>


</LinearLayout>