<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imgTour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cable_car" />

        <TextView
            android:id="@+id/lblTourTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textAlignment="center"
            android:textSize="30dp"
            android:layout_marginTop="15dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="5dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/column1r1Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/lblLanguagesTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblLanguages"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblLanguages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Spanish"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/column2r1Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/lblDurationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDuration"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblDurationStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblStart"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                    <TextView
                        android:id="@+id/lblDurationEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblEnd"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                    <TextView
                        android:id="@+id/lblDurationDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDays"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/column3r1Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/lblPriceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPrice"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/column1r2Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/lblCategoriesTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCategories"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblCategories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Passive"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/column2r2Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/lblCapacityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCapacity"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="min: 2"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/column3r2Tour"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/lblMeetingPointTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMeeting"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/lblMeetingPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Curva de Olguín"
                        android:maxLines="4"
                        android:textSize="16dp"
                        android:textColor="#FFFFFF"/>

                </LinearLayout>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/lblDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDescriptionTitle"
            android:textSize="20dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descripcion largaaa muuy larga que deberia bajar la la la la la la la la"
            android:maxLines="15"
            android:textSize="16dp"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@drawable/backborder"
            />

        <TextView
            android:id="@+id/lblTipsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTipsTitle"
            android:textSize="20dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/lblTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tip1"
            android:maxLines="10"
            android:textSize="16dp"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@drawable/backborder"/>

        <TextView
            android:id="@+id/lblLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLocationTitle"
            android:textSize="20dp"
            android:padding="10dp"/>

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/lblGuideTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGuideTitle"
            android:textSize="23dp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/lblGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Taylor Guide"
                android:maxLines="3"
                android:textSize="20dp"
                android:padding="10dp"/>

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleIndicator"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true" />

        </LinearLayout>


        <Button
            android:id="@+id/btnBook"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/btnBook"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:layout_marginTop="50dp"/>


    </LinearLayout>
</ScrollView>